Add dev mode for e2e testing

--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "pre-ci": "rm -rf node_modules",
     "ci": "yarn install --immutable --immutable-cache --check-cache",
     "test": "react-scripts test",
-    "test:e2e": "react-scripts test --testMatch=**\\.test\\.e2e\\.ts --detectOpenHandles",
-    "local:test:e2e": "REACT_APP_SELENIUM_TEST_URL=http://localhost:3000/my-react-app-with-ts/ yarn test:e2e",
+    "test:e2e": "react-scripts test --testMatch=**\\.test\\.e2e\\.ts",
+    "local:test:e2e": "DEV_MODE=true REACT_APP_SELENIUM_TEST_URL=http://localhost:3000/my-react-app-with-ts/ yarn test:e2e --detectOpenHandles",
     "prod:test:e2e": "yarn test:e2e"
   },
   "eslintConfig": {
