Fix local and prod host urls

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "homepage": "https://edujura.github.io/my-react-app-with-ts/",
+  "homepage": "https://edujura.github.io/my-react-app-with-ts",
+  "localDevPage": "http://localhost:3000/my-react-app-with-ts",
   "name": "my-react-app-with-ts",
   "version": "0.1.0",
   "private": true,
@@ -41,7 +42,7 @@
     "ci": "yarn install --immutable --immutable-cache --check-cache",
     "test": "react-scripts test",
     "test:e2e": "react-scripts test --testMatch=**\\.test\\.e2e\\.ts",
-    "local:test:e2e": "DEV_MODE=true REACT_APP_SELENIUM_TEST_URL=http://localhost:3000/my-react-app-with-ts/ yarn test:e2e --detectOpenHandles",
+    "local:test:e2e": "DEV_MODE=true REACT_APP_SELENIUM_TEST_URL=$npm_package_localDevPage yarn test:e2e --detectOpenHandles",
     "prod:test:e2e": "yarn test:e2e"
   },
   "eslintConfig": {
