--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "homepage": "https://edujura.github.io/my-react-app-with-ts",
-  "localDevPage": "http://localhost:3000/my-react-app-with-ts",
-  "name": "my-react-app-with-ts",
+  "homepage": "https://edujura.github.io/eduardo-juarez-app",
+  "localDevPage": "http://localhost:3000/eduardo-juarez-app",
+  "name": "eduardo-juarez-app",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
