--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
     "bootswatch": "^4.5.3",
     "postcss": "^8.4.38",
     "react": "^18.3.1",
@@ -33,7 +34,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:back-end": "docker-compose up --build",
+    "start:front-end": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
