Add script to run ci/cd pipeline test locally

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "test": "react-scripts test",
     "test:e2e": "react-scripts test --testMatch=**\\.test\\.e2e\\.ts",
     "local:test:e2e": "DEV_MODE=true REACT_APP_SELENIUM_TEST_URL=$npm_package_localDevPage yarn test:e2e --detectOpenHandles",
-    "prod:test:e2e": "yarn test:e2e"
+    "prod:test:e2e": "yarn test:e2e",
+    "test:act:ci-cd": "./scripts/act-ci-cd-pipeline-test.sh"
   },
   "eslintConfig": {
     "extends": [
